sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:6: error: reassignment to val
    echange=false
           ^AlgCombSort:11: error: Boolean does not take parameters
        echangefait(i, i+ecart)
                   ^AlgCombSort:12: error: reassignment to val
        echange=true
               ^AlgCombSort:16: error: missing argument list for method echange in class SortingEntity
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `echange _` or `echange(_,_)` instead of `echange`.
  } while (ecart>1 && echange)
                      ^